# gonna-pay-backend/docs/swagger.yaml
@@ -550,6 +550,14 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/rest_errors.RestErrors'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/rest_errors.RestErrors'
+        "409":
+          description: Email já em uso
+          schema:
+            $ref: '#/definitions/rest_errors.RestErrors'
         "500":
           description: Internal Server Error
           schema:
